Commit of the results of the Advent Of Code solutions for 2023 up to day 5.